...

	// MARK: - Views

	private var wordView: some View {
		HStack(spacing: .zero) {
			Text(viewModel.definitionItem.text)
				.accessibilityIdentifier("titleLabel")
				.font(.system(size: 25, weight: .semibold))

			Spacer()

			VStack {
				Button(
					action: {
						viewModel.onFavoriteButtonTap()
					}, label: {
						Image(systemName: viewModel.isFavorite ? "star.fill" : "star")
					}
				)
					.accessibilityIdentifier("favoriteButton")
					.padding()
				Spacer()
			}
		}
	}

...
